--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild" : "bash ./script/postbuild.sh",
+    "postbuild": "bash ./script/postbuild.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
