--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@notionhq/client": "^2.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.5",
+    "react-notion": "^0.10.0",
+    "react-notion-x": "^6.16.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "remark-gfm": "^3.0.1",
