--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "html2pdf.js": "^0.10.1",
+    "limiter": "^2.1.0",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
