--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,5 +5,17 @@ jobs:
   print-secret:
     runs-on: ubuntu-latest
     steps:
-      - name: print secret 
-      run: echo ${{secrets.TEST}}
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js 
+        uses: actions/setup-node@v3
+        with:
+          node-version: 23
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: test 
+        run: node script/getData.js test
