--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "d3": "^7.8.5",
         "dotenv": "^16.0.3",
         "eslint-config-prettier": "^10.1.8",
+        "eslint-config-react-app": "^7.0.1",
         "html2pdf.js": "^0.10.1",
         "limiter": "^2.1.0",
         "nodemon": "^3.1.10",
