--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-router-dom": "^6.8.2",
         "react-scripts": "^5.0.1",
         "remark-gfm": "^3.0.1",
+        "tailwindcss": "^4.1.13",
         "underscore.js": "^1.0.0",
         "web-vitals": "^2.1.4"
     },
@@ -57,9 +58,9 @@
         "@eslint/compat": "^1.3.2",
         "@eslint/js": "^9.34.0",
         "eslint": "^8.57.1",
-        "eslint-plugin-react": "^7.37.5",
         "eslint-config-prettier": "^10.1.8",
         "eslint-config-react-app": "^7.0.1",
+        "eslint-plugin-react": "^7.37.5",
         "gh-pages": "^5.0.0",
         "globals": "^16.3.0"
     }
